water readings frontend

--- a/resources/assets/app/common/navbar/navbar.html
+++ b/resources/assets/app/common/navbar/navbar.html
@@ -23,6 +23,26 @@
                         <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
                     </a>
                 </li>
+                <li>
+                    <a role="button" ui-sref="app.authenticated.gas-readings.list">
+                        <i class="fa fa-fire"></i> {{ 'GAS_READINGS' | translate }}
+                    </a>
+                </li>
+                <li>
+                    <a role="button" ui-sref="app.authenticated.gas-invoices.list">
+                        <i class="fa fa-file"></i> {{ 'GAS_INVOICES' | translate }}
+                    </a>
+                </li>
+                <li>
+                    <a role="button" ui-sref="app.authenticated.electricity-readings.list">
+                        <i class="fa fa-lightbulb-o"></i> {{ 'ELECTRICITY_READINGS' | translate }}
+                    </a>
+                </li>
+                <li>
+                    <a role="button" ui-sref="app.authenticated.water-readings.list">
+                        <i class="fa fa-tint"></i> {{ 'WATER_READINGS' | translate }}
+                    </a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
