--- a/resources/assets/app/common/footer/footer.html
+++ b/resources/assets/app/common/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer navbar-default">
     <div class="container-fluid">
-        <p class="text-muted">
-            &copy; {{::$ctrl.date | date:'yyyy'}}. <strong>ppawlas</strong>
+        <p class="text-muted text-right">
+            &copy;{{::$ctrl.date | date:'yyyy'}} ppawlas
         </p>
     </div>
 </footer>
