--- a/resources/assets/app/common/navbar/navbar.html
+++ b/resources/assets/app/common/navbar/navbar.html
@@ -65,6 +65,11 @@
                             </a>
                         </li>
                         <li>
+                            <a role="button" ui-sref="app.authenticated.gas-invoices.aggregates">
+                                <i class="fa fa-money"></i> {{ 'GAS_INVOICES_AGGREGATES' | translate }}
+                            </a>
+                        </li>
+                        <li>
                             <a role="button" ui-sref="app.authenticated.gas-invoices.create">
                                 <i class="fa fa-plus-square"></i> {{ 'NEW_READING' | translate }}
                             </a>
