electricity charge refactoring

--- a/resources/assets/app/common/navbar/navbar.html
+++ b/resources/assets/app/common/navbar/navbar.html
@@ -97,6 +97,11 @@
                             </a>
                         </li>
                         <li>
+                            <a role="button" ui-sref="app.authenticated.electricity-readings.charge">
+                                <i class="fa fa-money"></i> {{ 'ELECTRICITY_CHARGE' | translate }}
+                            </a>
+                        </li>
+                        <li>
                             <a role="button" ui-sref="app.authenticated.electricity-readings.create">
                                 <i class="fa fa-plus-square"></i> {{ 'NEW_READING' | translate }}
                             </a>
