electricity usage prediction client + dashboard + footers

--- a/resources/assets/app/common/navbar/navbar.html
+++ b/resources/assets/app/common/navbar/navbar.html
@@ -102,6 +102,11 @@
                             </a>
                         </li>
                         <li>
+                            <a role="button" ui-sref="app.authenticated.electricity-readings.prediction">
+                                <i class="fa fa-line-chart"></i> {{ 'ELECTRICITY_USAGE_PREDICTION' | translate }}
+                            </a>
+                        </li>
+                        <li>
                             <a role="button" ui-sref="app.authenticated.electricity-readings.create">
                                 <i class="fa fa-plus-square"></i> {{ 'NEW_READING' | translate }}
                             </a>
